--- a/WebFromSocket/WinFromSocket.csproj
+++ b/WebFromSocket/WinFromSocket.csproj
@@ -54,11 +54,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SocketMain.cs">
+    <Compile Include="WFSocketMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SocketMain.Designer.cs">
-      <DependentUpon>SocketMain.cs</DependentUpon>
+    <Compile Include="WFSocketMain.Designer.cs">
+      <DependentUpon>WFSocketMain.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -69,8 +69,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SocketMain.resx">
-      <DependentUpon>SocketMain.cs</DependentUpon>
+    <EmbeddedResource Include="WFSocketMain.resx">
+      <DependentUpon>WFSocketMain.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
